4.5 -> 5.0:
    - jbj: don't punish monkeys who insist on "My Widdle .spec" naming.
    - jbj: permit -ta spec file extraction from zip/lzo/lzma compressed balls.
    - jbj: add %{?__tar_wildcards} to pass Fedora automated regression tests.
    - jbj: use %{__tar} with -ta builds to assist morons who cannot set PATH.
    - jbj: add %{mkstemp: ... } macro primitive.
    - rse: fix po/POTFILES.in and tools/Makefile.am to reflect recent changes (fixes "make dist", too)
    - rpm.org: cleanup main() definitions in tests and tools
    - rse: include <netinet/in.h> and/or <arpa/inet.h> for htonl(3)
    - jbj: uncouple signature verification from transaction sets.
    - jbj: add (*findPubkey) (_ts, _dig) callback in pgpDig.
    - jbj: fix: headerUnload() size implies HEADER_MAGIC_NO, no hackery needed.
    - jbj: sum per-dig digest/signature stats into ts stats in rpmtsCleanDig.
    - jbj: initialize pgpVSFlags with pgpNewDig(vsflags).
    - jbj: add pgpVSFlags for pgpDig control disablers. ugh.
    - jbj: re-add rpmtsCleanDig() to preserve opaque rpmts.
    - jbj: add pgpStatsAccumulator, not fully wired yet.
    - jbj: refactor signature components from ts into dig container.
    - jbj: add size_t *lenp to headerUnload().
    - jbj: consistent naming in rpmdb/pkgio.c
    - jbj: eliminate rpmNewSignature() and rpmFreeSignature().
    - jbj: bury rpmReadSignature/rpmWriteSignature.
    - jbj: rip rpmtsCleanDig() inlining the code.
    - jbj: refactor headerVerifyInfo().
    - jbj: pour the amber over the corpse of the rpmlead. Ptooey! R.I.P.
    - jbj: stub in rpmpkgFoo() i/o methods.
    - jbj: refactor rpmlead I/O routines into rpmdb/pkgio.c.
    - jbj: protect rpmdb contents from cluelesser morons.
    - jbj: add sourcepkgid index and permit queries of the (non-existent) tag.
    - rpm.org: permit mire RE's against binary data. Useless ... (#277161).
    - rpm.org: mire RE against missing data now mis-matches rather than matches.